//syntax = "proto2";
//
//option java_package = "com.lvc.cds";
//option java_outer_classname = "AddressBookProtos";
//
//message Person {
//  required string name = 1;
//  required int32 id = 2;
//  optional string email = 3;
//
//  enum PhoneType {
//    MOBILE = 0;
//    HOME = 1;
//    WORK = 2;
//  }
//
//  message PhoneNumber {
//    required string number = 1;
//    optional PhoneType type = 2 [default = HOME];
//  }
//
//  repeated PhoneNumber phones = 4;
//}
//
//message AddressBook {
//  repeated Person people = 1;
//}

syntax = "proto2";

option java_package = "com.lvc.cds";
option java_outer_classname = "RaftProtos";

message AppendEntries {
  required int32 term = 1;
  required string leaderId = 2;
  required int32 previousLogIndex = 3;
  required int32 previousLogTerm = 4;

  message Pair {
    required string key = 1;
    required string value = 2;
  }

  repeated Pair entry = 5;
  required int32 leaderCommit = 6;
}

message RequestVote {
  required int32 term = 1;
  required string candidateId = 2;
  required int32 lastLogIndex = 3;
  required int32 lastLogTerm = 4;
}

message AppendEntriesResponse {
  required int32 term = 1;
  required bool success = 2;
}

message RequestVoteResponse {
  required int32 term = 1;
  required bool voteGranted = 2;
}